--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,5 +1,7 @@
+<div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
+
+
 <h1>Welcome to schedule tweet</h1>
-<p>This is a platform for scheduling tweets</p>
-<p>You can schedule tweets to be posted at a later time</p>
-<p>You can also schedule tweets to be posted at a later time</p>
-<p>You can also schedule tweets to be posted at a later time</p>
+
+
+</div>
